# server

./: Cargo.toml  README.md
assets/: index.html
examples/: bouncing-balls.mec
src/: client.rs  lib.rs  program.rs
src/watchers/: mod.rs  system.rs  websocket.rs
