[package]
name = "mech-server"
version = "0.0.1"
authors = ["Corey Montella <corey@mechlang.net>"]

[dependencies]
time = "0.1.39"
rand = "0.4.2"
iron = "0.6.0"
clap = "2.31.2"
term-painter = "0.2.4"
staticfile = "0.5"
mount = "0.4"
ws = "0.7.6"
serde = "1.0.46"
serde_derive = "1.0.46"
serde_json = "1.0.17"
bincode = "0.8"
walkdir = "1.0"
mech-core = {git = "https://gitlab.com/mech-lang/core.git"}
mech-syntax = {git = "https://gitlab.com/mech-lang/syntax.git"}