[package]
name = "mech-server"
version = "0.0.1"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Provides a server and client for hosting Mech programs on a websocket."
documentation = "http://mech-lang.org/page/learn/"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-lang/server"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"

[badges]
gitlab = { repository = "mech-lang/server", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
time = "0.1.39"
rand = "0.4.2"
iron = "0.6.0"
clap = "2.31.2"
term-painter = "0.2.4"
staticfile = "0.5"
mount = "0.4"
ws = "0.7.6"
serde = "1.0.46"
serde_derive = "1.0.46"
serde_json = "1.0.17"
bincode = "0.8"
walkdir = "1.0"
mech-program = "0.0.1"
mech-core = "0.0.1"
mech-syntax = "0.0.1"